# boffin_wayland

./: .gitignore  README.md  buildozer.spec
.github/workflows/: build.yml
android_src/com/boffin/wayland/: LorieSurfaceView.java
cpp/: CMakeLists.txt  build_native.sh  lorie_bridge.cpp  lorie_bridge.h  pty_core.cpp  pty_core.h
python/: main.py  vt100_parser.py
